<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/emailButton"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/locationImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/location_icon"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toTopOf="@id/alarmImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/alarmImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/alarm_icon"
            android:src="@drawable/ic_alarm"
            app:layout_constraintBottom_toTopOf="@id/signInText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationImage" />

        <TextView
            android:id="@+id/signInText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_sign"
            app:layout_constraintTop_toBottomOf="@id/alarmImage"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/primaryDarkColor"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/emailButton"
        style="@style/login_button"
        android:background="@drawable/button_background_red"
        android:drawableStart="@drawable/fui_ic_mail_white_24dp"
        android:drawableLeft="@drawable/fui_ic_mail_white_24dp"
        android:text="@string/e_mail"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/googleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/googleButton"
        style="@style/login_button"
        android:background="@drawable/button_background_white"
        android:drawableStart="@drawable/fui_ic_googleg_color_24dp"
        android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
        android:text="@string/google_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>